--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ header ul li:nth-child(1) a{
 }
 
 #aboutUs {
+	margin-top: 100px;
 	position: relative;
 	top: 800px;
 	display: block;
@@ -198,6 +199,7 @@ header ul li:nth-child(1) a{
 	height: 600px;
 	width: 100%;
 	margin-top: 850px;
+	padding-top: 100px;
 	display: block;
 	background-color: #10344e;
 	z-index: 9;
@@ -240,6 +242,7 @@ header ul li:nth-child(1) a{
 }
 
 #video iframe{
+	padding-top: 100px;
 	position: relative;
 	left: 50%;
 	margin-left: -500px; 
@@ -249,6 +252,7 @@ header ul li:nth-child(1) a{
 }
 
 #noise{
+	padding-top: 80px;
 	margin-top: 40px;
 	background-color: #10344e;
 	width: 100%;
